<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_round_corner_bg">

    <include
        android:id="@+id/viewToolbar"
        layout="@layout/view_services_filter_bottom_sheet_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/size_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewToolbar">

        <View
            android:id="@+id/viewDividerToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:background="@color/dimGreyOpacity41"
            app:layout_constraintBottom_toTopOf="@id/dtpFromDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/dtpFromDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_20"
            android:layout_marginTop="@dimen/size_20"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/size_8"
            app:layout_constraintBottom_toTopOf="@id/viewDividerDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDividerToolbar">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/from" />

                <TextView
                    android:id="@+id/fromDateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_4"
                    android:gravity="start|center_vertical"
                    android:text="@string/pick_a_date" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_8"
                android:src="@drawable/ic_arrow" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:id="@+id/viewDividerDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:layout_marginHorizontal="@dimen/size_17"
            android:layout_marginVertical="@dimen/size_9"
            android:layout_marginTop="@dimen/size_16"
            android:background="@color/paynesGreyOpacity29"
            app:layout_constraintBottom_toTopOf="@id/dtpToDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dtpFromDate" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/dtpToDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_20"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/size_8"
            app:layout_constraintBottom_toTopOf="@id/viewDividerStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDividerDate">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/to" />

                <TextView
                    android:id="@+id/toDateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_4"
                    android:gravity="start|center_vertical"
                    android:text="@string/pick_a_date" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_8"
                android:src="@drawable/ic_arrow" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:id="@+id/viewDividerStatus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:layout_marginHorizontal="@dimen/size_17"
            android:layout_marginVertical="@dimen/size_9"
            android:layout_marginTop="@dimen/size_16"
            android:background="@color/paynesGreyOpacity29"
            app:layout_constraintBottom_toTopOf="@id/linStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dtpToDate" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_20"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/size_8"
            app:layout_constraintBottom_toTopOf="@id/btnFilter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDividerStatus">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/statusText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/all" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_8"
                android:src="@drawable/ic_arrow" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_20"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="@string/filterResults"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linStatus" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
